data/derived/comb/progs/unify/prog8530.ml.out
Characters 112-128:
  let seen' = if (List.mem(h, t)) then 
                 ^^^^^^^^^^^^^^^^
Error: This expression has type ('a * 'a list) list -> bool
       but an expression was expected of type bool
